--- a/src/Catty/Resources/Localization/ar.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/ar.lproj/Localizable.strings
@@ -26,7 +26,7 @@
 "acceleration-sensor" = "جهاز استشعار لتسريع";
 
 /* No comment provided by engineer. */
-"Actors and objects" = "Actors and objects";
+"Actors and objects" = "أشكال و عناصر";
 
 /* No comment provided by engineer. */
 "Add" = "إضافة";
@@ -989,9 +989,6 @@
 "No description available" = "No description available";
 
 /* No comment provided by engineer. */
-"Please enter at least %lu character(s)." = "لم يتم الإدخال. من فضلك أدخل على الأقل %lu حرف/ أحرف.";
-
-/* No comment provided by engineer. */
 "No or invalid image name entered, try again." = "لا يوجد إسم أو إدخال أسم غير صحيح للصورة، حاول مرة أخرى.";
 
 /* No comment provided by engineer. */
@@ -1119,6 +1116,9 @@
 
 /* paint */
 "Please enter a text." = "Please enter a text.";
+
+/* No comment provided by engineer. */
+"Please enter at least %lu character(s)." = "Please enter at least %lu character(s).";
 
 /* No comment provided by engineer. */
 "Please log in to report this project as inappropriate" = "Please log in to report this project as inappropriate";
