--- a/src/Catty/Resources/Localization/en-GB.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/en-GB.lproj/Localizable.strings
@@ -989,9 +989,6 @@
 "No description available" = "No description available";
 
 /* No comment provided by engineer. */
-"Please enter at least %lu character(s)." = "Please enter at least %lu character(s).";
-
-/* No comment provided by engineer. */
 "No or invalid image name entered, try again." = "No or invalid image name entered, try again.";
 
 /* No comment provided by engineer. */
@@ -1119,6 +1116,9 @@
 
 /* paint */
 "Please enter a text." = "Please enter a text.";
+
+/* No comment provided by engineer. */
+"Please enter at least %lu character(s)." = "Please enter at least %lu character(s).";
 
 /* No comment provided by engineer. */
 "Please log in to report this project as inappropriate" = "Please log in to report this project as inappropriate";
@@ -1652,7 +1652,7 @@
 "Upload" = "Upload";
 
 /* No comment provided by engineer. */
-"Upload project" = "Upload program";
+"Upload project" = "Upload project";
 
 /* No comment provided by engineer. */
 "Upload selected project" = "Upload selected project";
