--- a/src/Catty/Resources/Localization/it.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/it.lproj/Localizable.strings
@@ -26,13 +26,13 @@
 "acceleration-sensor" = "sensore di accelerazione";
 
 /* No comment provided by engineer. */
-"Actors and objects" = "Actors and objects";
+"Actors and objects" = "Attori ed oggetti";
 
 /* No comment provided by engineer. */
 "Add" = "Aggiungi";
 
 /* No comment provided by engineer. */
-"Add actor or object" = "Add actor or object";
+"Add actor or object" = "Aggiungi oggetto o attore";
 
 /* No comment provided by engineer. */
 "add comment here..." = "aggiungi un commento...";
@@ -77,7 +77,7 @@
 "and wait" = "e aspetta";
 
 /* No comment provided by engineer. */
-"Animate brick-parts" = "Animate brick-parts";
+"Animate brick-parts" = "Anima parti mattoncini";
 
 /* No comment provided by engineer. */
 "Apr" = "Apr";
@@ -89,10 +89,10 @@
 "Arduino" = "Arduino";
 
 /* No comment provided by engineer. */
-"arduino analog" = "arduino analog";
+"arduino analog" = "analogico arduino";
 
 /* No comment provided by engineer. */
-"arduino digital" = "arduino digital";
+"arduino digital" = "arduino digitale";
 
 /* No comment provided by engineer. */
 "at " = "a ";
@@ -179,7 +179,7 @@
 "By switching to the section \"Explore\" you can discover more interesting projects from people all over the world." = "Dalla sezione \"Esplora\" si può scoprire nuovi programmi interessanti caricati da persone di tutto il mondo.";
 
 /* No comment provided by engineer. */
-"Camera roll" = "Camera roll";
+"Camera roll" = "Rullino fotografico";
 
 /* No comment provided by engineer. */
 "Can't restart project!" = "Impossibile riavviare il progetto!";
@@ -194,7 +194,7 @@
 "Cannot connect to device. The device is not responding." = "Impossibile connettersi al dispositivo. Il dispositivo non risponde.";
 
 /* No comment provided by engineer. */
-"Cannot connect to the media library. Please check your internet connection." = "Cannot connect to the media library. Please check your internet connection.";
+"Cannot connect to the media library. Please check your internet connection." = "Impossibile connettersi alla libreria multimediale. Verifica la connessione ad Internet.";
 
 /* No comment provided by engineer. */
 "Categories" = "Categorie";
@@ -221,13 +221,13 @@
 "Change volume by" = "Modifica il volume di";
 
 /* No comment provided by engineer. */
-"Change x by " = "Change x by ";
+"Change x by " = "Cambia x di  ";
 
 /* No comment provided by engineer. */
-"Change y by " = "Change y by ";
+"Change y by " = "Cambia y di ";
 
 /* No comment provided by engineer. */
-"Changes discarded." = "Changes discarded.";
+"Changes discarded." = "Modifiche annullate.";
 
 /* No comment provided by engineer. */
 "Changes saved." = "Modifiche salvate!";
@@ -272,7 +272,7 @@
 "Connection failed" = "Connessione fallita";
 
 /* bluetooth */
-"Connection lost" = "Connection lost";
+"Connection lost" = "Connessione persa";
 
 /* bluetooth */
 "Connection not possible" = "Connessione non possibile";
@@ -290,10 +290,10 @@
 "Copy" = "Copiare";
 
 /* No comment provided by engineer. */
-"Copy brick" = "Copy brick";
+"Copy brick" = "Copia mattoncino";
 
 /* No comment provided by engineer. */
-"Copy looks" = "Copy looks";
+"Copy looks" = "Copia i costumi";
 
 /* No comment provided by engineer. */
 "Copy project" = "Copia progetto";
@@ -323,37 +323,37 @@
 "Delete" = "Eliminare";
 
 /* No comment provided by engineer. */
-"Delete actors or objects" = "Delete actors or objects";
+"Delete actors or objects" = "Elimina oggetti o attori";
 
 /* No comment provided by engineer. */
-"Delete backgrounds" = "Delete backgrounds";
+"Delete backgrounds" = "Elimina sfondi";
 
 /* No comment provided by engineer. */
-"Delete brick" = "Delete brick";
+"Delete brick" = "Elimina mattoncino";
 
 /* No comment provided by engineer. */
-"Delete condition" = "Delete condition";
+"Delete condition" = "Elimina condizione";
 
 /* No comment provided by engineer. */
 "Delete item from list" = "Elimina l'elemento dalla lista";
 
 /* No comment provided by engineer. */
-"Delete looks" = "Delete looks";
+"Delete looks" = "Elimina aspetti";
 
 /* No comment provided by engineer. */
-"Delete loop" = "Delete loop";
+"Delete loop" = "Elimina ciclo";
 
 /* No comment provided by engineer. */
-"Delete project" = "Delete project";
+"Delete project" = "Elimina progetto";
 
 /* No comment provided by engineer. */
-"Delete projects" = "Delete projects";
+"Delete projects" = "Elimina progetti";
 
 /* No comment provided by engineer. */
-"Delete script" = "Delete script";
+"Delete script" = "Cancella script";
 
 /* No comment provided by engineer. */
-"Delete sounds" = "Delete sounds";
+"Delete sounds" = "Elimina suoni";
 
 /* No comment provided by engineer. */
 "Delete these bricks?" = "Delete these bricks?";
@@ -989,9 +989,6 @@
 "No description available" = "No description available";
 
 /* No comment provided by engineer. */
-"Please enter at least %lu character(s)." = "Nessun input. Si prega di inserire almeno %lu caratteri.";
-
-/* No comment provided by engineer. */
 "No or invalid image name entered, try again." = "Nome dell'immagine mancante o non valido; riprova.";
 
 /* No comment provided by engineer. */
@@ -1119,6 +1116,9 @@
 
 /* paint */
 "Please enter a text." = "Please enter a text.";
+
+/* No comment provided by engineer. */
+"Please enter at least %lu character(s)." = "Please enter at least %lu character(s).";
 
 /* No comment provided by engineer. */
 "Please log in to report this project as inappropriate" = "Effettua il login per poter segnalare questo programma come inappropriato";
