--- a/src/Catty/Resources/Localization/ur.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/ur.lproj/Localizable.strings
@@ -26,7 +26,7 @@
 "acceleration-sensor" = "تیز رفتار سینسر";
 
 /* No comment provided by engineer. */
-"Actors and objects" = "Actors and objects";
+"Actors and objects" = "اداکار اور آبجیکٹ";
 
 /* No comment provided by engineer. */
 "Add" = "جمع";
@@ -989,9 +989,6 @@
 "No description available" = "No description available";
 
 /* No comment provided by engineer. */
-"Please enter at least %lu character(s)." = "Please enter at least %lu character(s).";
-
-/* No comment provided by engineer. */
 "No or invalid image name entered, try again." = "کوئی یا غلط تصویر کا نام درج نہیں، دوبارہ کوشش کریں.";
 
 /* No comment provided by engineer. */
@@ -1119,6 +1116,9 @@
 
 /* paint */
 "Please enter a text." = "Please enter a text.";
+
+/* No comment provided by engineer. */
+"Please enter at least %lu character(s)." = "Please enter at least %lu character(s).";
 
 /* No comment provided by engineer. */
 "Please log in to report this project as inappropriate" = "اس منصوبے کو نامناسب طور پر رپورٹ کرنے کیلئے لاگ ان کریں";
